force-app/main/default/objects/Account_Filter_Data__c/Account_Filter_Data__c.object-meta.xml
<CustomObject>
    <label>Account Filter Data</label>
    <nameField>
        <displayFormat>User-{00000}</displayFormat>
        <label>Account Filter Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Filter Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>