force-app/main/default/objects/Account_Filter_Data__c/fields/Field_Condition__c.field-meta.xml
<CustomField>
    <fullName>Field_Condition__c</fullName>
    <label>Field Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>