force-app/main/default/objects/Account_Filter_Data__c/fields/Filed_Name__c.field-meta.xml
<CustomField>
    <fullName>Filed_Name__c</fullName>
    <label>Filed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>