force-app/main/default/objects/Account_Filter_Data__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>